# api_swapfaceserver

./: .gitattributes  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  cmake_install.cmake  main  results.html
include/: FaceSwapper.h  FaceSwapper2.cpp  SwapFaceServer.h  faceSwap.cpp  faceSwapUtils.h  faceswap.hpp
src/: .SwapFaceServer.cpp.swp  FaceLandMark.hpp  FaceSwapper.cpp  FaceSwapper.h  SwapFaceServer.cpp  SwapFaceServer.h  faceSwap.cpp  utils.cpp
